--- a/projects/08/ProgramFlow/FibonacciSeries/FibonacciSeries.vm
+++ b/projects/08/ProgramFlow/FibonacciSeries/FibonacciSeries.vm
@@ -8,6 +8,7 @@
 // Argument[0] and argument[1] are initialized by the test script 
 // before this code starts running.
 
+function Sys.init
 push argument 1
 pop pointer 1           // that = argument[1]
 
@@ -47,3 +48,4 @@ pop argument 0          // num_of_elements--
 goto MAIN_LOOP_START
 
 label END_PROGRAM
+return
